refactor: Simplify authentication to use environment password only
- Remove authenticated_sessions set - no session storage needed
- Pre-compute MASTER_PASSWORD_HASH at startup for fast verification
- Update verify_auth() to compare token against MASTER_PASSWORD_HASH directly
- Update login endpoint to return hashed environment password as token
- Simplify logout endpoint (stateless authentication)
- Authentication now entirely driven by environment password from .env

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -56,7 +56,18 @@ jobs:
         port: ${{ secrets.SSH_PORT }}
         key: ${{ secrets.SSH_PRIVATE_KEY }}
         script: |
-          sleep 5
-          curl -f http://localhost:8001/api/health || exit 1
-          echo "✅ Deployment verified successfully!"
+          sleep 10
+          max_attempts=30
+          attempt=1
+          while [ $attempt -le $max_attempts ]; do
+            echo "Health check attempt $attempt/$max_attempts..."
+            if curl -f http://localhost:8001/api/health; then
+              echo "✅ Deployment verified successfully!"
+              exit 0
+            fi
+            attempt=$((attempt + 1))
+            sleep 2
+          done
+          echo "❌ Health check failed after $max_attempts attempts"
+          exit 1
 
