improve: Add comprehensive startup diagnostics and error handling
- Enhance workflow to capture service status and logs after deployment
- Add detailed logging to startup event with clear markers
- Wrap all startup tasks in try-catch to allow app to continue if any fails
- Database init now non-fatal - app starts even if DB fails
- Prompt templates init now non-fatal
- Scheduler init now non-fatal
- Enhanced health check endpoint with version and timestamp
- Better error messages with section headers for debugging

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -46,7 +46,15 @@ jobs:
           
           # Restart the service
           sudo systemctl restart content-generator
-          sudo systemctl status content-generator --no-pager -l
+          sleep 3
+          
+          # Check service status
+          echo "=== Service Status ==="
+          sudo systemctl status content-generator --no-pager -l || true
+          
+          # Check for errors in logs
+          echo "=== Recent Logs ==="
+          sudo journalctl -u content-generator -n 50 --no-pager || true
           
     - name: Verify deployment
       uses: appleboy/ssh-action@v0.1.7
