--- a/requirements.txt
+++ b/requirements.txt
@@ -7,4 +7,9 @@ openai==1.3.5
 yt-dlp==2023.11.16
 youtube-transcript-api==0.6.1
 aiofiles==23.2.1
+apscheduler==3.10.4
+sqlalchemy>=2.0
+aiosqlite>=0.19.0
+alembic>=1.13.0
+assemblyai>=0.48.0
 
