FIX: deploy.yml YAML syntax, database package conflict, missing env vars, type errors, pricing, frontend bugs
- Fix deploy.yml line 57 YAML syntax error (use heredoc instead of python -c)
- Fix database.py shadowing database/ package (merged into __init__.py, renamed old file)
- Add MASTER_PASSWORD, ASSEMBLYAI_API_KEY, DATABASE_URL to .env.example files
- Fix invalid __table_args__ syntax in database/models.py (use SQLAlchemy Index)
- Fix duplicate import hashlib, remove unused imports (Header, shutil)
- Fix wrong type annotation AsyncSessionLocal -> AsyncSession (4 endpoints)
- Fix password/hash logging at startup (security)
- Update cost_calculator.py with gpt-4o, gpt-4o-mini, gpt-5-mini pricing
- Fix frontend verifyEditPassword for standard_static_content textarea ID

--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,16 @@
 # OpenAI API Configuration
 OPENAI_API_KEY=your_openai_api_key_here
-OPENAI_MODEL=gpt-4
+OPENAI_MODEL=gpt-4o-mini
+
+# Master Password (REQUIRED - Change this to a secure password!)
+# This password is required to access the application
+MASTER_PASSWORD=ChangeMeToSecurePassword123!
+
+# AssemblyAI API Key (REQUIRED for audio transcription)
+ASSEMBLYAI_API_KEY=your_assemblyai_api_key_here
+
+# Database URL (optional - defaults to SQLite)
+DATABASE_URL=sqlite+aiosqlite:///backend/content.db
 
 # YouTube Configuration (optional)
 YOUTUBE_API_KEY=optional_youtube_api_key
