--- a/nginx/contents.2160.media.conf
+++ b/nginx/contents.2160.media.conf
@@ -2,9 +2,9 @@ server {
     listen 80;
     server_name contents.2160.media;
 
-    client_max_body_size 500M;
-    client_body_timeout 300s;
-    proxy_read_timeout 300s;
+    client_max_body_size 1G;
+    client_body_timeout 600s;
+    proxy_read_timeout 600s;
     proxy_connect_timeout 300s;
     proxy_send_timeout 300s;
 
