--- a/nginx/contents.2160.media.conf
+++ b/nginx/contents.2160.media.conf
@@ -19,6 +19,7 @@ server {
     }
 
     location /api/ {
+        client_max_body_size 1G;
         proxy_pass http://127.0.0.1:8001;
         proxy_http_version 1.1;
         proxy_set_header Host $host;
