fix: restore SSL/HTTPS nginx config with 1G upload limit

--- a/nginx/contents.2160.media.conf
+++ b/nginx/contents.2160.media.conf
@@ -1,6 +1,24 @@
+# HTTP -> HTTPS redirect
 server {
     listen 80;
     server_name contents.2160.media;
+
+    if ($host = contents.2160.media) {
+        return 301 https://$host$request_uri;
+    }
+
+    return 404;
+}
+
+# HTTPS server
+server {
+    listen 443 ssl;
+    server_name contents.2160.media;
+
+    ssl_certificate /etc/letsencrypt/live/contents.2160.media/fullchain.pem;
+    ssl_certificate_key /etc/letsencrypt/live/contents.2160.media/privkey.pem;
+    include /etc/letsencrypt/options-ssl-nginx.conf;
+    ssl_dhparam /etc/letsencrypt/ssl-dhparams.pem;
 
     client_max_body_size 1G;
     client_body_timeout 600s;
